@@ -1,6 +1,7 @@
 17.5
 -----
 * [*] Fixed a bug that was causing some fonts to become enormous when large text was enabled.
+* [*] Improved large text support in the blog details header in My Sites. [#16521]
 
 17.4
 -----
